--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,10 @@
 			"memory": 3008
 		}
 	},
-	"rewrites": [{ "source": "/(.*)", "destination": "/api" }]
+	"rewrites": [
+		{
+			"source": "/:match*",
+			"destination": "/api/:match"
+		}
+	]
 }
