--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "@hopinc/ogmeta",
-  "version": "1.0.0",
-  "repository": "https://github.com/hopinc/ogmeta",
-  "author": "Alistair Smith <hi@alistair.sh>",
-  "packageManager": "yarn@3.2.0",
-  "scripts": {
-    "start": "vercel dev"
-  },
-  "devDependencies": {
-    "@vercel/node": "^2.5.13",
-    "prettier": "^2.7.1",
-    "typescript": "^4.8.2",
-    "vercel": "^28.2.2"
-  },
-  "dependencies": {
-    "chrome-aws-lambda": "^10.1.0",
-    "puppeteer-core": "^17.1.0",
-    "zod": "^3.18.0"
-  }
+	"name": "@hopinc/ogmeta",
+	"version": "1.0.0",
+	"repository": "https://github.com/hopinc/ogmeta",
+	"author": "Alistair Smith <hi@alistair.sh>",
+	"packageManager": "yarn@3.2.3",
+	"scripts": {
+		"start": "vercel dev",
+		"build": "tsc"
+	},
+	"devDependencies": {
+		"@vercel/node": "^2.5.21",
+		"prettier": "^2.7.1",
+		"typescript": "^4.8.4",
+		"vercel": "^28.4.6"
+	},
+	"dependencies": {
+		"chrome-aws-lambda": "^10.1.0",
+		"puppeteer-core": "^18.2.0",
+		"zod": "^3.19.1"
+	}
 }
