--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	},
 	"dependencies": {
 		"chrome-aws-lambda": "^10.1.0",
-		"puppeteer-core": "^18.2.0",
+		"puppeteer-core": "13.7.0",
 		"zod": "^3.19.1"
 	}
 }
